--- a/produse.css
+++ b/produse.css
@@ -3,6 +3,7 @@
   transition: 0.3s;
   width: 20rem;
   background-color: azure;
+  border-radius: 20px;
 }
 
 .card:hover {
@@ -12,9 +13,10 @@
   padding: 2px 16px;
 } 
 .card img {
-    width: 100%;
-    height: 10rem;
-    object-fit: cover;
+  width: 100%;
+  height: 10rem;
+  object-fit: cover;
+  border-radius: 20px;
 }  
 .container b {
     font-size: 25px;
@@ -22,9 +24,9 @@
 .button {
     background-color: #693C12;
     text-align: center;
-    width: 200px;
+    width: 180px;
     margin: 1rem auto;
-    font-size: 25px;
+    font-size: 20px;
 }
 .button a{
     color: #fff;
