--- a/contact.css
+++ b/contact.css
@@ -1,11 +1,21 @@
+h1{
+    text-align: center;
+}
+
+.map{
+    display: flex;
+    justify-content: center;
+    margin: 10px auto;
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 25rem;
   background-color: azure;
   margin: 2rem auto;
-  height: 440px;
-  border-radius: 40px;
+  height: 390px;
+  border-radius: 5px;
 }
 
 .card:hover {
@@ -17,22 +27,11 @@
 .card img {
     width: 100%;
     height: 12rem;
-    border-radius: 40px;
+    border-radius: 5px;
     object-fit: cover;
 }  
 .container b {
     font-size: 25px;
-}
-.button {
-    background-color: #693C12;
-    text-align: center;
-    width: 200px;
-    margin: 1rem auto;
-    font-size: 25px;
-}
-.button a{
-    color: #fff;
-    text-decoration: none;
 }
 
 .grid-content {
@@ -42,16 +41,27 @@
   max-width: 100%;
   margin: 5rem 10rem;
 }
+#button {
+    color: #4f6ddb;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+.contact-details{
+    text-align: center;
+    color: black;
+}
 
-@media (max-width: 1300px) {
-    .grid-content {
-        display: block;
-        align-items: center;
-        max-width: 100%;
-        margin: 5rem 0;
-    }
-    .card {
-        margin: 2rem auto;
-    }
+a {
+  color: rgb(24, 66, 204);
+  text-decoration: none;
+}
 
+@media (max-width: 700px) {
+  h2 {
+    font-size: 18pt;
+  }
+  p {
+    font-size: 13pt;
+  }
 }
