--- a/navbar.css
+++ b/navbar.css
@@ -13,6 +13,7 @@ body {
   font-family: jost-medium, sans-serif;
 }
 
+
 .nav > .nav-header {
   display: inline;
 }
@@ -40,9 +41,8 @@ body {
   margin: 0 1rem;
   color: #522A05;
 }
-
 .nav > .nav-links > a:hover {
-  background-color: rgba(0, 0, 0, 0.3);
+  color: #152f57;
 }
 
 @media (max-width:600px) {
@@ -51,18 +51,19 @@ body {
     position: absolute;
     right: 0px;
     top: 0px;
+    height: 50px;
   }
   .nav > .nav-btn > label {
     display: inline-block;
-    width: 50px;
-    height: 50px;
-    padding: 13px;
+    width: 25px;
+    height: 25px;
+    padding: 16px;
   }
   .nav > .nav-btn > label > span {
     display: block;
     width: 25px;
-    height: 10px;
-    border-top: 2px solid #522A05;
+    height: 7px;
+    border-top: 3px solid #522A05;
   }
   .nav > .nav-links {
     position: absolute;
@@ -97,6 +98,36 @@ body {
   object-fit: cover;
   max-height: 50px;
   width: 200px;
+  background-color: #00000000;
+  transition: all 0.5s;
+}
+
+
+.popup {
+  display: none; 
+  background-color: #D2B28F;
+  position: relative;
+  top: -10px;
+}
+.popup ul {
+  margin: 0;
+  list-style-type: none;
+  text-align: center;
+  font-size: 17pt;
+  padding: 25px;
+  line-height: 50px;
+}
+.popup ul li a{
+  text-decoration: none;
+  margin: 30px 0;
+  color: #522A05;
+}
+.popup ul span {
+  width: 250px;
+  height: 2px;
+  display: flex;
+  margin: 0 auto;
+  background: linear-gradient(to right, #522A0500, #522A05, #522A0500);
 }
 
 
@@ -118,4 +149,14 @@ body {
 @font-face {
   font-family: jost-medium;
   src: url('./resources/fonts/Jost-Medium.ttf');
+}
+
+
+/* TRANSITIONS */
+.transition-in {
+  opacity: 0;
+  transition: all 1s;
+}
+.visible {
+  opacity: 1;
 }
