--- a/produse.css
+++ b/produse.css
@@ -22,7 +22,6 @@
     font-size: 25px;
 }
 .button {
-    background-color: #693C12;
     text-align: center;
     width: 180px;
     margin: 1rem auto;
@@ -41,15 +40,45 @@
   margin: 5rem 10rem;
 }
 
+#submit{
+    font-family: jost-bold, serif;
+    font-size: 13pt;
+    background-color: #4E5C90;
+    color: #fff;
+    border-color: #ffffff00;
+    border-radius: 8px;
+    width: 130px;
+    height: 40px;
+    font-family: jost-regular;
+    cursor: pointer;
+    transition: all .2s;
+}
+
+#submit:hover {
+  background-color: #1d2541;
+      background: #1d2541;
+  box-shadow: 0 0 10px black;
+}
+
 @media (max-width: 1300px) {
     .grid-content {
         display: block;
         align-items: center;
         max-width: 100%;
-        margin: 5rem 5rem;
+        margin: 5rem 0;
     }
     .card {
         margin: 2rem auto;
     }
 
+}
+
+@font-face {
+    font-family: jost-regular;
+    src: url('./resources/fonts/Jost-Regular.ttf');
+}
+
+@font-face {
+    font-family: jost-bold;
+    src: url('./resources/fonts/Jost-Bold.ttf');
 }
