--- a/produse.css
+++ b/produse.css
@@ -47,7 +47,7 @@
     color: #fff;
     border-color: #ffffff00;
     border-radius: 8px;
-    width: 130px;
+    min-width: 130px;
     height: 40px;
     font-family: jost-regular;
     cursor: pointer;
@@ -56,7 +56,7 @@
 
 #submit:hover {
   background-color: #1d2541;
-      background: #1d2541;
+  background: #1d2541;
   box-shadow: 0 0 10px black;
 }
 
