--- a/navbar.css
+++ b/navbar.css
@@ -1,8 +1,8 @@
 body {
-  background: #D2B28F;
   margin: 0;
   background-color: #D3D6E1;
   font-family: jost-regular, sans-serif;
+  background-image: #D2B28F;
 }
 
 .nav {
