--- a/contact.css
+++ b/contact.css
@@ -14,7 +14,7 @@ h1{
   width: 25rem;
   background-color: azure;
   margin: 2rem auto;
-  height: 390px;
+  height: auto;
   border-radius: 5px;
 }
 
