--- a/produse.css
+++ b/produse.css
@@ -32,12 +32,15 @@
     text-decoration: none;
 }
 
+body {
+  height: 100%;
+}
 .grid-content {
   display: grid;
   grid-template-columns: 1.5fr 1.5fr 1fr;
   align-items: center;
   max-width: 100%;
-  margin: 5rem 10rem;
+  margin: calc(50vh - 217px) 10rem;
 }
 
 #submit{
